@@ -1,3 +1,4 @@
+23-may-2009 - adelikat - win32 - Load Last Movie context menu item added
 23-may-2009 - adelikat - win32 - Recent Movie Menu added
 22-may-2009 - adelikat - win32 - "Disable screen saver" gui option now also diables the monitor powersave
 22-may-2009 - adelikat - win32 - Debugger - Step type functions now update other dialogs such as ppu, nametable, code/data, trace logger, etc.
